--- a/lab_assignment_01.ipynb
+++ b/lab_assignment_01.ipynb
@@ -133,21 +133,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fj0XhwbBCw2o",
-        "outputId": "c3e3bd61-711d-443d-d0a1-50a479dbe154"
+        "outputId": "f8a7ca69-3b15-4df1-9706-ba978a52eef4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the String value: openopaqueowl\n",
-            "open$paque$wl\n"
+            "Enter the String value: restart\n",
+            "resta$t\n"
           ]
         }
       ],
